Revision history for Dist-Zilla-Plugin-DynamicPrereqs-Meta

{{$NEXT}}
          - Add dynamic_config and x_static_install to the metadata

0.004     2024-09-15 14:27:47+02:00 Europe/Brussels
          - Fix link to CPAN::Requirements::Dynamic

0.003     2024-07-31 15:42:07+02:00 Europe/Brussels
          - Fix usage of singular "prereq" argument

0.002     2024-04-27 18:31:08+02:00 Europe/Brussels
          - Fix formatting of synopsis

0.001     2024-04-27 17:47:05+02:00 Europe/Brussels
          Initial release to an unsuspecting world