@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-DynamicPrereqs-Meta
 
 {{$NEXT}}
+          - Add [DynamicPrereqs::ModuleBuildTiny] and [DynamicPrereqs::DistBuild]
           - Add dynamic_config and x_static_install to the metadata
 
 0.004     2024-09-15 14:27:47+02:00 Europe/Brussels
